--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+	background-color: rgb(255, 243, 221) !important;
+	min-height: 100vh !important;
+	padding: 3rem 0;
+}
